--- a/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-search-bar/sw-search-bar.html.twig
@@ -1,5 +1,5 @@
 {% block sw_search_bar %}
-    <div class="sw-search-bar" :style="headerOffsetStyles">
+    <div class="sw-search-bar">
 
         {% block sw_search_bar_container %}
             <div class="sw-search-bar__container">
