--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -36,7 +36,7 @@
                                   ref="inputItemName"
                                   class="sw-media-grid-media-item__name-field"
                                   type="text"
-                                  :value="item.fileName | pathToFileName"
+                                  :value="item.fileName"
                                   v-autofocus
                                   @click.stop
                                   @blur="endInlineEdit"
@@ -46,10 +46,10 @@
                         <div v-else
                              class="sw-media-grid-media-item__name"
                              ref="itemName"
-                             :title="item.fileName + '.' + item.fileExtension | pathToFileName"
+                             :title="item | mediaName"
                              :data-last-content="lastContent"
                              @dblclick="startInlineEdit">
-                            {{ item.fileName + '.' + item.fileExtension | pathToFileName }}
+                            {{ item | mediaName }}
                         </div>
                     </template>
                 {% endblock %}
