NEXT-1185 - Add sidebar to Manufacturer

--- a/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
@@ -30,10 +30,8 @@
                         :isList="true"
                         @sw-media-grid-media-item-delete="handleMediaGridItemDelete">
 
-                        {% block sw_sidebar_media_item_context_item_add_to_product %}
-                            <sw-context-menu-item slot="additional-context-menu-items" @click="addItemToProduct(mediaItem)">
-                                {{ $tc('global.sw-media-grid-media-item.labelContextMenuAddToProduct') }}
-                            </sw-context-menu-item>
+                        {% block sw_sidebar_media_item_context_items %}
+                            <slot name="context-menu-items" slot="additional-context-menu-items" :mediaItem="mediaItem"></slot>
                         {% endblock %}
                     </sw-media-grid-media-item>
 
