--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -25,7 +25,7 @@
         {% endblock %}
 
         {% block sw_manufacturer_detail_content %}
-            <sw-card-view slot="content">
+            <sw-card-view slot="content" sidebar>
                 {% block sw_manufacturer_detail_base_basic_info_card %}
                     <sw-card :title="$tc('sw-manufacturer.detail.cardTitleManufacturerInfo')" :isLoading="manufacturer.isLoading">
                         <sw-container columns="repeat(auto-fit, minmax(250px, 1fr)" gap="0 30px">
@@ -55,7 +55,7 @@
                                         :allowMultiSelect="false"
                                         variant="regular"
                                         :caption="$tc('sw-manufacturer.detail.addLogoCaption')"
-                                        @media-upload-success="onSuccessfulImageUpload">
+                                        @media-upload-success="setMediaItem">
                                     </sw-media-upload-button>
                                 {% endblock %}
 
@@ -88,6 +88,16 @@
                         {% endblock %}
                     </sw-card>
                 {% endblock %}
+
+                <template slot="card-view-sidebar">
+                    <sw-sidebar-media-item>
+                        <template slot="context-menu-items" slot-scope="media">
+                            <sw-context-menu-item @click="setMediaItem(media.mediaItem)">
+                                {{ $tc('sw-manufacturer.detail.labelUseAsLogo') }}
+                            </sw-context-menu-item>
+                        </template>
+                    </sw-sidebar-media-item>
+                </template>
             </sw-card-view>
         {% endblock %}
     </sw-page>
