--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -9,6 +9,7 @@
 @sw-media-catalog-color-slider-container-border:     @color-steam-cloud;
 @sw-media-catalog-border-radius-slider-container:    @border-radius-default;
 @sw-media-catalog-background-color-slider-container: @color-white;
+@sw-media-catalog-page-background-color:             @color-white;
 @sw-media-catalog-border-radius-size-slider:         @border-radius-default;
 @sw-media-catalog-font-family:                       @font-family-default;
 @sw-media-catalog-pagination-background:             @color-light-gray;
@@ -18,6 +19,7 @@
 
 .sw-media-catalog {
     .sw-media-catalog__page-content {
+        background: @sw-media-catalog-page-background-color;
         display: grid;
         height: 100%;
         grid-template-columns: 1fr auto;
@@ -31,7 +33,7 @@
 
     .sw-media-catalog__content {
         display: grid;
-        grid-template-rows: 64px 1fr 64px;
+        grid-template-rows: auto 1fr;
         position:absolute;
         height: 100%;
         width: 100%;
@@ -162,9 +164,29 @@
         background-color: @sw-media-catalog-background-color-slider-container;
     }
 
-    .sw-media-catalog__sw-pagination {
-        background: @sw-media-catalog-pagination-background;
-        border-top: 1px solid @sw-media-catalog-pagination-border-color;
+    .sw-media-catalog__scroll-container {
+        overflow-y: auto;
+        overflow-x: hidden;
+    }
+
+    .sw-media-catalog__load-more {
+        text-align: center;
+        margin: 15px 0;
+
+        .sw-loader {
+            position: relative;
+            background: none;
+
+            .sw-loader__container {
+                height: 42px;
+                justify-content: center;
+                align-items: center;
+                align-content: center;
+                transform: none;
+                top: 0;
+                left: 0;
+            }
+        }
     }
 }
 
