--- a/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-media-form/sw-product-media-form.html.twig
@@ -7,6 +7,7 @@
                     :variant="'regular'"
                     :autoUpload="false"
                     :caption="$tc('sw-product.mediaForm.uploadCaption')"
+                    :scrollTarget="this.$parent.$el"
                     @media-upload-success="successfulUpload"
                     @new-upload="onNewUpload">
             </sw-media-upload-button>
