--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.html.twig
@@ -3,7 +3,7 @@
         {% block sw_media_preview_file_type_check %}
             <template v-if="checkForFileTypeImage">
                 {% block sw_media_preview_file_type_image %}
-                    <img :src="urlFromItem" :alt="item.fileName" class="sw-media-preview__item">
+                    <img :src="urlFromItem" :alt="item.fileName" class="sw-media-preview__item" :class="transparencyClass">
                 {% endblock %}
             </template>
 
