--- a/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-catalog/sw-media-catalog.less
@@ -39,7 +39,7 @@
 
     .sw-media-catalog__options-container {
         margin-left: auto;
-        padding: 10px 10px 10px 20px ;
+        padding: 24px 10px 0 20px ;
 
         .sw-field {
             display: inline-grid;
@@ -47,6 +47,7 @@
             grid-template-columns: auto auto;
             align-items: center;
             margin-right: 16px;
+            margin-bottom: 0;
 
             label {
                 margin: 8px 10px 8px 0;
@@ -69,7 +70,7 @@
     }
 
     .sw-media-catalog__media-grid {
-        padding: 0 10px 0 10px;
+        padding: 24px 10px 0 10px;
     }
 
     .sw-media-catalog__change {
