NTR - Fix name on File upload

--- a/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-grid-media-item/sw-media-grid-media-item.html.twig
@@ -49,7 +49,7 @@
                              :title="item | mediaName"
                              :data-last-content="lastContent"
                              @dblclick="startInlineEdit">
-                            {{ item | mediaName }}
+                            {{ item | mediaName(fallbackName) }}
                         </div>
                     </template>
                 {% endblock %}
