--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -5,9 +5,11 @@
 @sw-media-preview-border-color:             @color-steam-cloud;
 @sw-media-preview-border-color-highlighted: @color-shopware-blue;
 @sw-media-preview-border-radius:            @border-radius-default;
+@sw-media-preview-background:               @color-white;
 
 .sw-media-preview {
     position: relative;
+    background-color: @sw-media-preview-background;
     border: 1px solid @sw-media-preview-border-color;
     border-radius: @sw-media-preview-border-radius;
 
